# blvm-primitives

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  constants.rs  ibd_tuning.rs  lib.rs  orange_paper_helpers.rs  types.rs
src/crypto/: avx2_batch.rs  hash_compare.rs  int_ops.rs  mod.rs  sha256_avx2.rs  sha_ni.rs  simd_bytes.rs
src/serialization/: block.rs  mod.rs  transaction.rs  varint.rs
src/spec_types/: mod.rs  spec_hashmap.rs  spec_vec.rs
