[package]
name = "blvm-primitives"
version = "0.1.11"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLVM: Foundational types, serialization, crypto, and config for consensus and protocol layers"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-consensus"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "primitives", "types", "serialization", "crypto"]
categories = ["cryptography::cryptocurrencies", "algorithms"]
rust-version = "1.83"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.108"
thiserror = "=1.0.69"
smallvec = { version = "1.11", optional = true, features = ["serde", "const_generics"] }
rustc-hash = { version = "=2.1.1", optional = true }

# Consensus-critical cryptography - EXACT VERSIONS
bitcoin_hashes = "=0.11.0"
ripemd = "=0.1.3"

[features]
default = []
production = ["smallvec", "rustc-hash"]

# sha2: asm on non-Windows only (asm doesn't support Windows)
[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { version = "=0.10.9", features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = { version = "=0.10.9" }
